# code-draft

./: .gitignore  LICENSE  README.md
ControlDeviceApp/: ControlDeviceApp.sln
ControlDeviceApp/MainApp/: DeviceBase.h  MainApp.vcxproj  MainApp.vcxproj.filters  architecture.h  error_code.h  main.cpp
ControlDeviceApp/UITest/: UITest.vcxproj  UITest.vcxproj.filters  define.h  singleton.hpp  winmain.cpp  winproc.cpp
DesignPattern/: DesignPattern.sln
DesignPattern/adapter/: adapter.vcxproj  adapter.vcxproj.filters  adapter_main.cpp  mbc_channel_info.txt  mbc_radio.h
INIHelper/: INIHelper.cpp  INIHelper.hpp  INIHelper.sln  INIHelper.vcxproj  INIHelper.vcxproj.filters  main.cpp
MFCApp/: MFCApp.sln
MFCApp/MainApp/: ExRes.cpp  ExRes.h  MainApp.cpp  MainApp.h  MainApp.rc  MainApp.vcxproj  MainApp.vcxproj.filters  MainAppDlg.cpp  MainAppDlg.h  ReadMe.txt  Resource.h  WICWrapper.cpp  WICWrapper.h  stdafx.cpp
MFCApp/MainApp/res/: MainApp.rc2
MFCApp/ResDll/: ReadMe.txt  ResDll.cpp  ResDll.rc  ResDll.vcxproj  ResDll.vcxproj.filters  resource.h  stdafx.cpp
MFCApp/ResourceOnly/: Resource.rc  ResourceOnly.vcxproj  ResourceOnly.vcxproj.filters
MFCApp/UITest/: ReadMe.txt  UIButton.cpp  UIButton.h  UITest.cpp  UITest.h  UITest.rc  UITest.vcxproj  UITest.vcxproj.filters  UITestDlg.cpp  UITestDlg.h  resource.h  stdafx.cpp
MFCApp/UITest/res/: UITest.rc2
WNetTester/: WNetTester.sln
WNetTester/WNetTester/: ReadMe.txt  WNetTester.cpp  WNetTester.h  WNetTester.rc  WNetTester.vcxproj  WNetTester.vcxproj.filters  WNetTesterDlg.cpp  WNetTesterDlg.h  WNetWrapper.cpp  WNetWrapper.h  resource.h  stdafx.cpp
big_number/: big_number.h  main.cpp
cpp/: functor_implement_template.cpp  tokenizer.cpp  tokenizer_from_istream.cpp
delegate/: CMakeLists.txt
delegate/src/: CMakeLists.txt  main.cpp  sample.cpp
delegate/src/delegate/: delegate.hpp
dynamic-build-system/: CMakeLists.txt  README.md  main.cpp
dynamic-build-system/src/: CMakeLists.txt  main.cpp
dynamic-build-system/src/base/: CMakeLists.txt  isystem.cpp  isystem.hpp
dynamic-build-system/src/common/: CMakeLists.txt  application_code.hpp  common.hpp  error_code.hpp  version.cpp
dynamic-build-system/src/core/: CMakeLists.txt  core.hpp
dynamic-build-system/src/core/helper/: CMakeLists.txt  helper.cpp  helper.hpp
dynamic-build-system/src/core/iosystem/: CMakeLists.txt  iosystem.cpp  iosystem.hpp
dynamic-build-system/src/core/loader/: CMakeLists.txt  loader.cpp  loader.hpp  mod_template.hpp
dynamic-build-system/src/plugin/: CMakeLists.txt  sample.cpp  sample.hpp
dynamic-build-system/src/util/: CMakeLists.txt  executable_path.cpp  printline.cpp  tokenize.cpp  util.hpp
ioc/: CMakeLists.txt  common.hpp  main.cpp  printer.cpp  printer.hpp  task.hpp  timer.cpp  timer.hpp  worker.cpp  worker.hpp
js/: index.html  order.js  zIndex.js
network/: design.md  network.sln
network/client/: client.cpp  client.vcxproj
network/server/: main.cpp  server.cpp  server.h  server.vcxproj  server.vcxproj.filters  serverimpl.cpp  session.h  sessionbase.cpp  sessionbase.h  testsession.h
network/test/: test.cpp  test.vcxproj
simple_calculator/: onefile_simple_calculator.cpp
thread/: thread.sln
thread/thread/: ThreadManager.h  main.cpp  thread.vcxproj  thread.vcxproj.filters
(+1 files in other folders)
